--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Vinayak Gupta</title>
+    <title>Kartik Gupta</title>
     <meta name="description" content="PhD Student">
 
     <link rel="stylesheet" href="Homepage/main.css">
@@ -116,7 +116,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="http://www.cse.iitd.ac.in/~vinayak">Vinayak Gupta</a>
+    <a class="site-title" href="https://kartikgt.github.io/">Kartik Gupta</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -150,10 +150,10 @@
 
 <p><img style="float: left; width: 200px; margin:0 30px 20px 0" src="Homepage/round.png"></p>
 
-<p>Hi! I am a Ph.D. student at Indian Institute of Technology Delhi, where my advisor is <a href="http://www.cse.iitd.ac.in/~srikanta/">Prof. Srikanta Bedathur.</a></p>
+<p>Hi! I am a Software Engineer at SAP, Bangalore.</p>
 <p>
-Before that, I received my B.Tech. in Computer Science and Engineering from Indian Institute of Information Technology Jabalpur.
-I have also spent time as R&D intern at Siemens Healthcare Research.</p>
+Before that, I received my Dual Degree in Electronics and Electrical Engineering from Indian Institute of Technology Kharagpur.
+I have also spent time as R&D intern at Nomura and Maybach Consulting.</p>
 
 <p>My research lies in modelling temporal sequences using Point Processes.
 Here is my <a href="https://scholar.google.com/citations?user=tQuRm1AAAAAJ&hl=en">Google Scholar</a>.</p>
@@ -166,7 +166,7 @@ Here is my <a href="https://scholar.google.com/citations?user=tQuRm1AAAAAJ&hl=en
   </li>
 </ul>
 
-<h2 id="publications">Publications</h2>
+<h2 id="publications">Skills</h2>
 <ul>
   <li>
     <p><strong>LBRR: Load Balanced Ring Routing Protocol for Heterogeneous Sensor Networks with Sink Mobility</strong><br>
