--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ In <em>IEEE Wireless Communications and Networking Conference</em> (<strong>WCNC
 
 <ul>
   <li>
-    <p><strong>B.Tech in Computer Science</strong> (2013 - 17)<br>
-    <em>Indian Institute of Information Technology (IIIT) Jabalpur</em><br></p>
+    <p><strong>B.Tech + M.Tech in Electronics and Electrical Engg</strong> (2013 - 18)<br>
+    <em>Indian Institute of Technology (IIT) Kharagpur</em><br></p>
   </li>
   <li>
     <p><strong>High School</strong><br>
