--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
       <div class="trigger">
           <a class="page-link" href="">CV</a>
+          <a class="page-link" href="www.cse.iitd.ac.in/~vinayak">News</a>
       </div>
     </nav>
 
