--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
       <div class="trigger">
           <a class="page-link" href="">CV</a>
-          <a class="page-link" href="www.cse.iitd.ac.in/~vinayak">News</a>
+          <a class="page-link" href="">News</a>
       </div>
     </nav>
 
@@ -164,7 +164,7 @@ Here is my <a href="https://scholar.google.com/citations?user=tQuRm1AAAAAJ&hl=en
 <ul>
   <li>
     <p>Presented a poster at IBM AI week 2019 held at Boston, MA</p>
-    <p><img src="Homepage/round.png"> Hi this is me.</p>
+    <p><img src="Homepage/square.png"> Hi this is me.</p>
   </li>
 </ul>
 
