Revert "Update index.html"
This reverts commit a22bbbf3f2193f2e90414b38634e930acf2beb84.

--- a/index.html
+++ b/index.html
@@ -154,15 +154,26 @@
 <p>Hi! I am a Software Engineer at SAP, Bangalore.</p>
 <p>
 Before that, I received my Dual Degree in Electronics and Electrical Engineering from Indian Institute of Technology Kharagpur.
-I have also spent time as an intern at Nomura and Miebach Consulting.</p>
+I have also spent time as R&D intern at Nomura and Maybach Consulting.</p>
 
-<p>My master's thesis is on Generating Captions for Images using LSTM and CNNs.</p>
+<p>My research lies in modelling temporal sequences using Point Processes.
+Here is my <a href="https://scholar.google.com/citations?user=tQuRm1AAAAAJ&hl=en">Google Scholar</a>.</p>
 <br>
 
 <h2 id="news">News</h2>
 <ul>
   <li>
-    <p>Handling Big Data operations at SAP SuccessFactors</p>  
+    <p>Presented a poster at IBM AI week 2019 held at Boston, MA</p>  
+  </li>
+</ul>
+
+<h2 id="publications">Skills</h2>
+<ul>
+  <li>
+    <p><strong>LBRR: Load Balanced Ring Routing Protocol for Heterogeneous Sensor Networks with Sink Mobility</strong><br>
+Sonam Maurya, <strong>Vinayak Gupta, </strong> V.K. Jain  <font color="blue">(B.Tech. Thesis Work)</font> <br> 
+In <em>IEEE Wireless Communications and Networking Conference</em> (<strong>WCNC</strong>), 2017<br>
+<a href="https://ieeexplore.ieee.org/abstract/document/7925728">[paper]</a><a href="https://github.com/gvinayak/LBRR">[code]</a></p>
   </li>
 </ul>
 
@@ -170,7 +181,7 @@ I have also spent time as an intern at Nomura and Miebach Consulting.</p>
 
 <ul>
   <li>
-    <p><strong>B.Tech + M.Tech in Electronics and Electrical Engg</strong> (2013 - 2018)<br>
+    <p><strong>B.Tech + M.Tech in Electronics and Electrical Engg</strong> (2013 - 18)<br>
     <em>Indian Institute of Technology (IIT) Kharagpur</em><br></p>
   </li>
   <li>
@@ -195,7 +206,7 @@ I have also spent time as an intern at Nomura and Miebach Consulting.</p>
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>Vinayak Gupta</li>
-          <li><a href="mailto:kartikgt23@gmail.com">kartikgt23[at]gmail.com</a></li>
+          <li><a href="mailto:firstname.lastname@cse.iitd.ac.in">vinayak[dot]gupta@cse.iitd.ac.in</a></li>
         </ul>
       </div>
 
@@ -203,21 +214,21 @@ I have also spent time as an intern at Nomura and Miebach Consulting.</p>
         <ul class="social-media-list">
           
           <li>
-            <a href="https://github.com/kartikgt">
+            <a href="https://github.com/gvinayak">
               <span class="icon  icon--github">
                 <svg viewBox="0 0 16 16">
                   <path fill="#828282" d="M7.999,0.431c-4.285,0-7.76,3.474-7.76,7.761 c0,3.428,2.223,6.337,5.307,7.363c0.388,0.071,0.53-0.168,0.53-0.374c0-0.184-0.007-0.672-0.01-1.32 c-2.159,0.469-2.614-1.04-2.614-1.04c-0.353-0.896-0.862-1.135-0.862-1.135c-0.705-0.481,0.053-0.472,0.053-0.472 c0.779,0.055,1.189,0.8,1.189,0.8c0.692,1.186,1.816,0.843,2.258,0.645c0.071-0.502,0.271-0.843,0.493-1.037 C4.86,11.425,3.049,10.76,3.049,7.786c0-0.847,0.302-1.54,0.799-2.082C3.768,5.507,3.501,4.718,3.924,3.65 c0,0,0.652-0.209,2.134,0.796C6.677,4.273,7.34,4.187,8,4.184c0.659,0.003,1.323,0.089,1.943,0.261 c1.482-1.004,2.132-0.796,2.132-0.796c0.423,1.068,0.157,1.857,0.077,2.054c0.497,0.542,0.798,1.235,0.798,2.082 c0,2.981-1.814,3.637-3.543,3.829c0.279,0.24,0.527,0.713,0.527,1.437c0,1.037-0.01,1.874-0.01,2.129 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"></path>
                 </svg>
               </span>
 
-              <span class="username">kartikgt</span>
+              <span class="username">gvinayak</span>
             </a>
           </li>
         </ul>
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">Data Scientist @ SAP Labs</p>
+        <p class="text">PhD-Student@CSE-IITD</p>
       </div>
     </div>
 
