--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
       </a>
 
       <div class="trigger">
-          <a class="page-link" href="Kartik _Gupta.pdf">CV</a>
-          <a class="page-link" href="">News</a>
+          <a class="page-link" href="CV/CV.pdf">CV</a>
       </div>
     </nav>
 
