--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Kartik Gupta</title>
-    <meta name="description" content="PhD Student">
+    <meta name="description" content="Masters Student">
 
     <link rel="stylesheet" href="Homepage/main.css">
     <link rel="canonical" href="">
@@ -150,31 +150,57 @@
 
 <p><img style="float: left; width: 200px; margin:0 30px 20px 0" src="Homepage/round.png"></p>
 
-<p>Hi! I am a Software Engineer at SAP, Bangalore.</p>
+<p>Hi! I am a Computer Science graduate student at the University of Massachusetts Amherst. I am expected to receive my Masters and graduate in May 2024. </p>
 <p>
+Prior to joining my masters, I worked for 4 years as a Machine Learning engineer and a Data Scientist at Uber, Yodlee, and SAP Labs. My professional experience is in building and deploying ML applications, creating scalable data pipelines, and model life cycle management.   
 Before that, I received my Dual Degree in Electronics and Electrical Engineering from Indian Institute of Technology Kharagpur.
-I have also spent time as an intern at Nomura and Miebach Consulting.</p>
+</p>
 
-<p>My thesis at IIT Kharagpur was on Generating Captions for Images using LSTM and CNNs.</p>
+<p>My research focus at UMass Amherst is in Machine Learning, specifically in Computer Vision (generative models, learnable compression codecs, semi supervised learning) and 3D graphics (autoregressive models, text-to-3D, self attention 3D methods). I worked as a Graduate Researcher at Adobe Research where I worked with Stefano Petrangeli on learnable image and video compression codecs. </p>
 <br>
 <br>
 <h2 id="news">News</h2>
 <ul>
   <li>
-    <p>Coordinated the recruitment drive at Indian Institute of Technology Bombay for SAP in 2019.</p>  
+    <p>Joined Mathematica as a Data Scientist intern in the Health division, June 2023.</p>  
+  </li>
+  <li>
+    <p>Presented our work on Learnable Image Compression codecs as part of industry collaboration program under supervision of Prof. Andrew McCallum and Prof. Subhransu Maji, May 2023.</p>  
+  </li>
+  <li>
+    <p>Joined the MS in Computer Science program at the University of Massachusetts Amherst, Sep 2022.</p>  
+  </li>
+  <li>
+    <p>Joined Uber as a Machine Learning Engineer 2 as part of the Data Solutions team, May 2021.</p>  
+  </li>
+  <li>
+    <p>Joined SAP Labs as a Data Scientist, June 2018.</p>  
   </li>
 </ul>
 
 <h2 id="news">Skills</h2>
 <ul>
   <li>
-    <p>Managing Big Data operations at SAP SuccessFactors.</p>
+    <p>Machine Learning -- Computer Vision, 3D Graphics, Algorithms development, NLP.</p>
+  </li>
+  <li>
+    <p>Pytorch -- wandb, Lightning framework.</p>
+  </li>
+  <li>
+    <p>Bayesian methods, statistical inference, probabilistic models.</p>
+  </li>
+  <li>
+    <p>Distributed Computing -- Spark, Hadoop, Hive, Presto.</p>
   </li>
 </ul>
 
 <h2 id="news">Education</h2>
 
 <ul>
+  <li>
+    <p><strong>MS in Computer Science</strong> (2022 - 2024)<br>
+    <em>University of Massachusetts Amherst</em><br></p>
+  </li>
   <li>
     <p><strong>B.Tech + M.Tech in Electronics and Electrical Engg</strong> (2013 - 2018)<br>
     <em>Indian Institute of Technology (IIT) Kharagpur</em><br></p>
