--- a/index.html
+++ b/index.html
@@ -160,11 +160,30 @@ Before that, I received my Dual Degree in Electronics and Electrical Engineering
     <p>Joined SAP Labs as a Data Scientist, June 2018.</p>  
   </li>
 </ul>
-      
-<!--    Till Here is the new one.    -->
+
+<h2 id="news">Skills</h2>
+<ul>
+  <li>
+    <p>Machine Learning -- Computer Vision, 3D Graphics, Algorithms development, NLP.</p>
+  </li>
+  <li>
+    <p>Pytorch -- wandb, Lightning framework.</p>
+  </li>
+  <li>
+    <p>Bayesian methods, statistical inference, probabilistic models.</p>
+  </li>
+  <li>
+    <p>Distributed Computing -- Spark, Hadoop, Hive, Presto.</p>
+  </li>
+</ul>
 
 <h2 id="news">Education</h2>
+
 <ul>
+  <li>
+    <p><strong>MS in Computer Science</strong> (2022 - 2024)<br>
+    <em>University of Massachusetts Amherst</em><br></p>
+  </li>
   <li>
     <p><strong>B.Tech + M.Tech in Electronics and Electrical Engg</strong> (2013 - 2018)<br>
     <em>Indian Institute of Technology (IIT) Kharagpur</em><br></p>
@@ -174,6 +193,8 @@ Before that, I received my Dual Degree in Electronics and Electrical Engineering
     <em>Delhi Public School Indirapuram</em></p>
   </li>
 </ul>
+
+<!--    Till Here is the new one.    -->
   </article>
 </div>
       </div>
