test2 index.html

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Before that, I received my Dual Degree in Electronics and Electrical Engineering
         </ul>
       </div>
       <div class="footer-col  footer-col-3">
-        <p class="text">Associate Developer @ SAP Labs</p>
+        <p class="text">Let's colab on something fun and interesting!</p>
       </div>
     </div>
   </div>
