--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </svg>
       </a>
       <div class="trigger">
-          <a class="page-link" href="CV/CV.pdf">CV</a>
+          <a class="page-link" href="CV/Kartik_Gupta_CV_ext.pdf">CV</a>
       </div>
     </nav>
   </div>
