--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 .MJXp-scale7 {-webkit-transform: scaleX(.7); -moz-transform: scaleX(.7); -ms-transform: scaleX(.7); -o-transform: scaleX(.7); transform: scaleX(.7)}
 .MJXp-scale8 {-webkit-transform: scaleX(.8); -moz-transform: scaleX(.8); -ms-transform: scaleX(.8); -o-transform: scaleX(.8); transform: scaleX(.8)}
 .MJXp-scale9 {-webkit-transform: scaleX(.9); -moz-transform: scaleX(.9); -ms-transform: scaleX(.9); -o-transform: scaleX(.9); transform: scaleX(.9)}
-.MathJax_PHTML .noError {vertical-align: ; font-size: 90%; text-align: left; color: black; padding: 1px 3px; border: 1px solid}
+.MathJax_PHTML .noError {vertical-align:top ; font-size: 90%; text-align: left; color: black; padding: 1px 3px; border: 1px solid}
 </style>
     </head>
    
@@ -119,7 +119,7 @@
         </svg>
       </a>
       <div class="trigger">
-          <a class="page-link" href="CV/Kartik_Gupta_CV_ext.pdf">CV</a>
+          <a class="page-link" href="CV/Kartik_Gupta_DS.pdf">CV</a>
       </div>
     </nav>
   </div>
