--- a/index.html
+++ b/index.html
@@ -146,25 +146,32 @@ My expertise lies in solving end-to-end data problems -- creating robust and sca
 <h2 id="experience">Experience</h2>
 <ul>
   <li>
-    <h3>Data Science Intern @ Mathematica</h3>  
+    <h4>Data Science Intern @ Mathematica</h4>  
+    <p>June 2023 -- August 2023</p>
   </li>
   <li>
-    <p>Selected as a grader in the Advanced Machine Learning Theory course at UMass taught by Prof. Ben Marlin, Sep 2023.</p>  
+    <h4>Graduate Student Researcher @ Adobe</h4>  
+    <p>January 2023 -- June 2023</p>  
   </li>
   <li>
-    <p>Joined Mathematica as a Data Scientist intern in the Health division, June 2023.</p>  
+    <h4>Software Engineer 2 - Data @ Uber</h4>  
+    <p>May 2021 -- August 2022</p>  
   </li>
   <li>
-    <p>Presented our work on Learnable Image Compression as part of industry collaboration program with Adobe Research under supervision of Prof. Andrew McCallum and Prof. Subhransu Maji, May 2023.</p>  
+    <h4>Member of Technical Staff - Big Data Engineering @ Envestnet</h4>  
+    <p>October 2020 -- April 2021</p>  
   </li>
   <li>
-    <p>Joined the MS in Computer Science program at the University of Massachusetts Amherst, Sep 2022.</p>  
+    <h4>Data Scientist @ SAP Labs</h4>  
+    <p>June 2018 -- September 2020</p>  
   </li>
   <li>
-    <p>Joined Uber as a Data Engineer 2 as part of the Data Solutions team, May 2021.</p>  
+    <h4>Data Analyst Intern @ Nomura Financial Technologies</h4>  
+    <p>May 2017 -- July 2017</p>  
   </li>
   <li>
-    <p>Joined SAP Labs as a Data Scientist, June 2018.</p>  
+    <h4>Analyst Intern @ Miebach Consulting</h4>  
+    <p>May 2016 -- July 2016</p> 
   </li>
 </ul>
 
