--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 I bring a unique skillset comprising of 4+ years of work experience as a Data/Machine Learning Engineer, Data Scientist, and a Data Platform developer. I have worked with Uber, Envestnet, and SAP prior to joining my Masters.
 My expertise lies in solving end-to-end data problems -- creating robust and scalable data pipelines and warehouses, designing data models for peta byte scale, developing and deploying large scale Machine Learning inferencing models, and performing statistical and ad-hoc analysis for evaluating and analyzing hypothesis!
 </p>
-
+<p>I completed my undergraduate studies from the Indian Institute of Technology Kharagpur (IIT KGP), where I obtained a dual degree (Bachelors + Masters) in Electronics and Communications Engineering with a specialization in VLSI design. </p>
 <p>My research interests include NLP, CV, and ML Theory.</p>
 <br>
 <br>
