--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
       </a>
       <div class="trigger">
           <a class="page-link" href="CV/Kartik_Gupta.pdf">CV</a>
-          <!-- <a class="page-link" href="experience.html">Experience</a>
+          <a class="page-link" href="experience.html">Experience</a>
           <a class="page-link" href="projects.html">Projects</a>
-          <a class="page-link" href="blog.html">blog</a> -->
+          <a class="page-link" href="blog.html">blog</a>
           
       </div>
       <div class="trigger">
