--- a/projects.html
+++ b/projects.html
@@ -121,6 +121,8 @@
       <div class="trigger">
           <a class="page-link" href="index.html">Home</a>
           <a class="page-link" href="CV/Kartik_Gupta.pdf">CV</a>
+          <a class="page-link" href="experience.html">Experience</a>
+          <a class="page-link" href="blog.html">Blog</a>
       </div>
     </nav>
   </div>
