--- a/experience.html
+++ b/experience.html
@@ -122,7 +122,7 @@
           <a class="page-link" href="index.html">Home</a>
           <a class="page-link" href="CV/Kartik_Gupta.pdf">CV</a>
           <a class="page-link" href="projects.html">Projects</a>
-          <a class="page-link" href="blog.html">blog</a>
+          <a class="page-link" href="blog.html">Blog</a>
       </div>
     </nav>
   </div>
