--- a/index.html
+++ b/index.html
@@ -157,39 +157,6 @@ My expertise lies in solving end-to-end data problems -- creating robust and sca
 <p>My research interests include Machine Learning, Natural Lnguage Processing -- specifically language agents, and Computer Vision -- image compression algorithms, 3D transformers.</p>
 
 <br>
-<br>
-
-<h2 id="experience">Experience</h2>
-<ul>
-  <li>
-    <h4>Data Science Intern @ Mathematica</h4>  
-    <p>June 2023 -- August 2023</p>
-  </li>
-  <li>
-    <h4>Graduate Student Researcher @ Adobe</h4>  
-    <p>January 2023 -- June 2023</p>  
-  </li>
-  <li>
-    <h4>Software Engineer 2 - Data @ Uber</h4>  
-    <p>May 2021 -- August 2022</p>  
-  </li>
-  <li>
-    <h4>Member of Technical Staff - Big Data Engineering @ Envestnet</h4>  
-    <p>October 2020 -- April 2021</p>  
-  </li>
-  <li>
-    <h4>Data Scientist @ SAP Labs</h4>  
-    <p>June 2018 -- September 2020</p>  
-  </li>
-  <!-- <li>
-    <h4>Data Analyst Intern @ Nomura Financial Technologies</h4>  
-    <p>May 2017 -- July 2017</p>  
-  </li>
-  <li>
-    <h4>Analyst Intern @ Miebach Consulting</h4>  
-    <p>May 2016 -- July 2016</p> 
-  </li> -->
-</ul>
 
 <h2 id="news">News</h2>
 <ul>
@@ -218,7 +185,7 @@ My expertise lies in solving end-to-end data problems -- creating robust and sca
 
 
 
-<h2 id="skills">Skills</h2>
+<!-- <h2 id="skills">Skills</h2>
 <ul>
   <li>
     <p>Machine Learning -- Computer Vision, 3D Graphics, Algorithms development, NLP.</p>
@@ -232,7 +199,7 @@ My expertise lies in solving end-to-end data problems -- creating robust and sca
   <li>
     <p>Distributed Computing -- Spark, Hadoop, Hive, Presto.</p>
   </li>
-</ul>
+</ul> -->
 
 <h2 id="education">Education</h2>
 
