--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ I bring a unique skillset comprising of 4+ years of work experience as a Data/Ma
 My expertise lies in solving end-to-end data problems -- creating robust and scalable data pipelines and warehouses, designing data models for peta byte scale, developing and deploying large scale Machine Learning inferencing models, and performing statistical and ad-hoc analysis for evaluating and analyzing hypothesis!
 </p>
 <p>I completed my undergraduate studies from the Indian Institute of Technology Kharagpur (IIT KGP), where I obtained a dual degree (Bachelors + Masters) in Electronics and Communications Engineering with a specialization in VLSI design. </p>
-<p>My research interests include Machine Learning, Natural Lnguage Processing -- specifically language agents, and Computer Vision -- image compression algorithms, 3D transformers.</p>
+<p>My research interests include topics in Natural Language Processing and Computer Vision.</p>
 
 <br>
 
