--- a/experience.html
+++ b/experience.html
@@ -139,11 +139,11 @@
 <p>My professional work experience spans multiple responsibilities and diverse workplaces. I have 4+ years of experience in the domains of healthcare analytics, consumer technology, marketplace, financial technology, and enterprise software.
     <br>
     <br>
-    <p><img style="float: none; width: 125px; margin:0 15px 10px 0" src="images/SAP_logo.png">
-        <img style="float: none; width: 125px; margin:0 15px 10px 0" src="images/Envestnet_Yodlee_logo.svg.png">
+    <p><img style="float: left; width: 125px; margin:0 15px 10px 0" src="images/SAP_logo.png">
+        <img style="float: left; width: 125px; margin:0 15px 10px 0" src="images/Envestnet_Yodlee_logo.svg.png">
         <img style="float: none; width: 125px; margin:0 15px 10px 0" src="images/uber_logo.png">     
-    <img style="float: none; width: 125px; margin:0 15px 10px 0" src="images/free-adobe-3691237-3073757.png">
-        <img style="float: none; width: 125px; margin:0 15px 10px 0" src="images/mathematica_logo.png"></p>
+    <img style="float: right; width: 125px; margin:0 15px 10px 0" src="images/free-adobe-3691237-3073757.png">
+        <img style="float: right; width: 125px; margin:0 15px 10px 0" src="images/mathematica_logo.png"></p>
 <br>
 <br>
     <u>Summarizing my work experience:</u>
