--- a/blog.html
+++ b/blog.html
@@ -171,7 +171,7 @@
         </ul>
       </div>
       <div class="footer-col  footer-col-3">
-        <p class="text">Let's colab on something fun and interesting!</p>
+        <p class="text">Let's collab on something fun and interesting!</p>
       </div>
     </div>
   </div>
