--- a/experience.html
+++ b/experience.html
@@ -219,7 +219,7 @@ Should you have any questions regarding my roles and responsibilities in any of 
         </ul>
       </div>
       <div class="footer-col  footer-col-3">
-        <p class="text">Let's colab on something fun and interesting!</p>
+        <p class="text">Let's collab on something fun and interesting!</p>
       </div>
     </div>
   </div>
