--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ My expertise lies in solving end-to-end data problems -- creating robust and sca
         </ul>
       </div>
       <div class="footer-col  footer-col-3">
-        <p class="text">Let's colab on something fun and interesting!</p>
+        <p class="text">Let's collab on something fun and interesting!</p>
       </div>
     </div>
   </div>
