--- a/experience.html
+++ b/experience.html
@@ -640,37 +640,6 @@
               <br />
               <br />
             </p>
-
-            <p>
-              <img
-                style="float: none; width: 150px; margin: 0 25px 10px 0"
-                src="images/SAP_logo.png"
-              />
-
-              <h3>Data Scientist</h3> 
-              <li><p>Workflow orchestration and CI/CD using Git, Jenkins</p></li>
-              <li><p>Infrastructure provisioning, configuration management, and deployments using Terraform, Ansible, Chef</p></li>
-              <li><p>Analytics datalake and warehouse solutions using Hadoop HDFS, Spark, Hive, and ElasticSearch</p></li>
-              <li><p>Automated testing suite for application features using Java, Selenium</p></li>
-              <li><p>Health, server, and API traffic monitoring using Splunk, Zabbix, Kibana, and Grafana</p></li>
-
-            </p>
-              <!-- <img style="float: left; width: 125px; margin:0 15px 10px 0" src="images/Envestnet_Yodlee_logo.svg.png"> -->
-              <img
-                style="float: none; width: 150px; margin: 0 25px 10px 0"
-                src="images/uber_logo.png"
-              />
-              <img
-                style="float: none; width: 150px; margin: 0 25px 10px 0"
-                src="images/free-adobe-3691237-3073757.png"
-              />
-              <img
-                style="float: none; width: 150px; margin: 0 25px 10px 0"
-                src="images/mathematica_logo.png"
-              />
-            </p>
-            <br />
-            <br />
             <h2 id="experience">At a Glance</h2>
             <ul>
               <li>
@@ -692,10 +661,65 @@
                 <p>October 2020 -- April 2021</p>
               </li>
               <li>
-                <h4>Data Scientist @ SAP Labs</h4>
+                <h4>Software Engineer @ SAP Labs</h4>
                 <p>June 2018 -- September 2020</p>
               </li>
             </ul>
+            <br />
+            <br />
+            <p>
+              <img
+                style="display: inline-block; width: 150px; margin: 0 25px 10px 0"
+                src="images/mathematica_logo.png"
+              />
+              <h3>Data Scientist Intern</h3> 
+              <li>Multivariate data modeling and causal inferencing for healthcare data</li>
+              <li>Random Forest and Decision Tree based methods for estimate prediction using pruned estimators</li>
+              <li>Dimensionality reduction and explainable variable selection using Sparse PCA (PCA with lasso penalty)</li>
+              <li>Framework for database creation in Redshift using multi-source raw data using Pandas, Boto3, and Step Functions</li>
+              <li>Modeling standalone and crosswalk datasets in Redshift and RDS for medical insurance pricing database</li>
+            </p>
+            <p>
+              <img
+                style="display: inline-block; width: 150px; margin: 0 25px 10px 0"
+                src="images/free-adobe-3691237-3073757.png"
+              />
+              <h3>Deep Learning Researcher (part-time)</h3> 
+              <li>Learning optimal image compression algorithms for computer vision pipelines</li>
+              <li>Generalized latent representations of salient features for object detection, segmentation, and classification</li>
+              <li>Latency and memory reduction using an autoencoder based approach with information from pretrained hyperpriors</li>
+              <li>GPU training and testing with modular code using Pytorch Lightning</li>
+            </p>
+            <p>
+              <!-- <img style="float: left; width: 125px; margin:0 15px 10px 0" src="images/Envestnet_Yodlee_logo.svg.png"> -->
+              <img
+                style="display: inline-block; width: 150px; margin: 0 25px 10px 0"
+                src="images/uber_logo.png"
+              />
+              <h3>Software Engineer II</h3> 
+              <li>Batch analytics at scale (100PB+) using Spark and Hive query engines on HDFS and S3</li>
+              <li>Real-time streaming pipelines and analytics using Apache Flink engine on Kafka topics</li>
+              <li>Query performance and resource optimizations using Spark and SQL best practices</li>
+              <li>Python and Java application development for supporting monitoring and governance use cases</li>
+              <li>Writing PRDs and proposal documentation for adding new features and integrating new acquisitions data resources</li>
+              <li>Data modeling for efficient querying, fault tolerance, and memory optimization using advanced SQL and design patterns</li>
+            </p>
+            <p>
+              <img
+                style="display: inline-block; width: 150px; margin: 0 25px 10px 0"
+                src="images/SAP_logo.png"
+              />
+
+              <h3>Software Engineer</h3> 
+              <li>Workflow orchestration and CI/CD using Git, Jenkins</li>
+              <li>Infrastructure provisioning, configuration management, and deployments using Terraform, Ansible, Chef</li>
+              <li>Analytics datalake and warehouse solutions using Hadoop HDFS, Spark, Hive, and ElasticSearch</li>
+              <li>Automated testing suite for application features using Java, Selenium</li>
+              <li>Health, server, and API traffic monitoring using Splunk, Zabbix, Kibana, and Grafana</li>
+
+            </p>
+
+            
             <!-- <br>
 <br>
     <u>Summarizing my work experience:</u>
