--- a/experience.html
+++ b/experience.html
@@ -669,7 +669,7 @@
             <br />
             <p>
               <img
-                style="display: inline-block; width: 150px; margin: 0 25px 10px 0"
+                style="float: left; width: 150px; margin: 0 25px 10px 0"
                 src="images/mathematica_logo.png"
               />
               <h3>Data Scientist Intern</h3> 
@@ -681,7 +681,7 @@
             </p>
             <p>
               <img
-                style="display: inline-block; width: 150px; margin: 0 25px 10px 0"
+                style="float: left; width: 150px; margin: 0 25px 10px 0"
                 src="images/free-adobe-3691237-3073757.png"
               />
               <h3>Deep Learning Researcher (part-time)</h3> 
@@ -693,7 +693,7 @@
             <p>
               <!-- <img style="float: left; width: 125px; margin:0 15px 10px 0" src="images/Envestnet_Yodlee_logo.svg.png"> -->
               <img
-                style="display: inline-block; width: 150px; margin: 0 25px 10px 0"
+                style="float: left; width: 150px; margin: 0 25px 10px 0"
                 src="images/uber_logo.png"
               />
               <h3>Software Engineer II</h3> 
@@ -706,7 +706,7 @@
             </p>
             <p>
               <img
-                style="display: inline-block; width: 150px; margin: 0 25px 10px 0"
+                style="float: left; width: 150px; margin: 0 25px 10px 0"
                 src="images/SAP_logo.png"
               />
 
