--- a/experience.html
+++ b/experience.html
@@ -641,7 +641,7 @@
               <br />
             </p>
             <h2 id="experience">At a Glance</h2>
-            <ul>
+            <!-- <ul>
               <li>
                 <h4>Data Science Intern @ Mathematica</h4>
                 <p>June 2023 -- August 2023</p>
@@ -664,12 +664,12 @@
                 <h4>Software Engineer @ SAP Labs</h4>
                 <p>June 2018 -- September 2020</p>
               </li>
-            </ul>
+            </ul> -->
             <br />
             <br />
             <p>
               <img
-                style="float: left; width: 150px; margin: 0 25px 10px 0"
+                style="float: left; width: 200px; margin: 0 15px 10px 0"
                 src="images/mathematica_logo.png"
               />
               <h3>Data Scientist Intern</h3> 
@@ -679,9 +679,10 @@
               <li>Framework for database creation in Redshift using multi-source raw data using Pandas, Boto3, and Step Functions</li>
               <li>Modeling standalone and crosswalk datasets in Redshift and RDS for medical insurance pricing database</li>
             </p>
+            <br />
             <p>
               <img
-                style="float: left; width: 150px; margin: 0 25px 10px 0"
+                style="float: left; width: 200px; margin: 0 15px 10px 0"
                 src="images/free-adobe-3691237-3073757.png"
               />
               <h3>Deep Learning Researcher (part-time)</h3> 
@@ -690,10 +691,11 @@
               <li>Latency and memory reduction using an autoencoder based approach with information from pretrained hyperpriors</li>
               <li>GPU training and testing with modular code using Pytorch Lightning</li>
             </p>
+            <br />
             <p>
               <!-- <img style="float: left; width: 125px; margin:0 15px 10px 0" src="images/Envestnet_Yodlee_logo.svg.png"> -->
               <img
-                style="float: left; width: 150px; margin: 0 25px 10px 0"
+                style="float: left; width: 200px; margin: 0 15px 10px 0"
                 src="images/uber_logo.png"
               />
               <h3>Software Engineer II</h3> 
@@ -704,9 +706,10 @@
               <li>Writing PRDs and proposal documentation for adding new features and integrating new acquisitions data resources</li>
               <li>Data modeling for efficient querying, fault tolerance, and memory optimization using advanced SQL and design patterns</li>
             </p>
+            <br />
             <p>
               <img
-                style="float: left; width: 150px; margin: 0 25px 10px 0"
+                style="float: left; width: 200px; margin: 0 15px 10px 0"
                 src="images/SAP_logo.png"
               />
 
@@ -718,7 +721,9 @@
               <li>Health, server, and API traffic monitoring using Splunk, Zabbix, Kibana, and Grafana</li>
 
             </p>
-
+          <br />
+          <br />
+          <h4>More details in the resume</h4>
             
             <!-- <br>
 <br>
