--- a/experience.html
+++ b/experience.html
@@ -673,6 +673,7 @@
                 src="images/mathematica_logo.png"
               />
               <h3>Data Scientist Intern</h3> 
+              <h4>Mathematica</h4>
               <li>Multivariate data modeling and causal inferencing for healthcare data</li>
               <li>Random Forest and Decision Tree based methods for estimate prediction using pruned estimators</li>
               <li>Dimensionality reduction and explainable variable selection using Sparse PCA (PCA with lasso penalty)</li>
@@ -686,6 +687,7 @@
                 src="images/free-adobe-3691237-3073757.png"
               />
               <h3>Deep Learning Researcher (part-time)</h3> 
+              <h4>Adobe Research</h4>
               <li>Learning optimal image compression algorithms for computer vision pipelines</li>
               <li>Generalized latent representations of salient features for object detection, segmentation, and classification</li>
               <li>Latency and memory reduction using an autoencoder based approach with information from pretrained hyperpriors</li>
@@ -699,6 +701,7 @@
                 src="images/uber_logo.png"
               />
               <h3>Software Engineer II</h3> 
+              <h4>Uber</h4>
               <li>Batch analytics at scale (100PB+) using Spark and Hive query engines on HDFS and S3</li>
               <li>Real-time streaming pipelines and analytics using Apache Flink engine on Kafka topics</li>
               <li>Query performance and resource optimizations using Spark and SQL best practices</li>
@@ -714,6 +717,7 @@
               />
 
               <h3>Software Engineer</h3> 
+              <h4>SAP Labs</h4>
               <li>Workflow orchestration and CI/CD using Git, Jenkins</li>
               <li>Infrastructure provisioning, configuration management, and deployments using Terraform, Ansible, Chef</li>
               <li>Analytics datalake and warehouse solutions using Hadoop HDFS, Spark, Hive, and ElasticSearch</li>
