--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <body><div id="MathJax_Message" style="display: none;"></div>
     <header class="site-header">
   <div class="wrapper">
-    <a class="site-title" href="https://kartikgt.github.io/">Kartik Gupta</a>
+    <a class="site-title" href="https://kartikgt.github.io/">Kartik</a>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
