--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a class="page-link" href="CV/Kartik_Gupta.pdf">CV</a>
           <a class="page-link" href="experience.html">Experience</a>
           <a class="page-link" href="projects.html">Projects</a>
-          <a href="/blog/">Blog</a>
+          <a class="page-link" href="blog.html">Blog</a>
 
           
       </div>
